--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;500;700;900&display=swap');
 
 :root {
   --p-color: black;
